# mixed-chatbot

./: .dockerignore  .env  Dockerfile  LICENSE  README.md  docker-build.sh  docker-cleanup.sh  docker-compose-build.sh  docker-compose-cleanup.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
BACKUP/: actions.py  app.py  config.yml  credentials.yml  domain.yml  endpoints.yml
BACKUP/data/: nlu.yml  rules.yml  stories.yml
BACKUP/static/css/: custom.css
BACKUP/templates/: index.html
BACKUP/workflows/: rasa_server.sh
actions_service/: Dockerfile  actions.py  requirements.txt
flask_service/: Dockerfile  app.py  requirements.txt
flask_service/templates/: index.html
physio_backend/: Dockerfile  data.py  document_store.py  main.py  qa_pipeline.py
physio_backend/documents/: physiotherapy_data.txt
physio_frontend/: Dockerfile  api_client.py  app.py  components.py  requirements.txt
physio_frontend/templates/: index.html
rag_app/: __init__.py
rag_app/config/: settings.py
rag_app/data_ingestion/: __init__.py  document_preprocessor.py  pdf_loader.py
rag_app/document_store/: __init__.py  haystack_documents.db  local_document_store.py
rag_app/models/: embedding_service.py  generative_service.py
rag_app/pipelines/: __init__.py  indexing_pipeline.py  query_pipeline.py
rag_app/services/: rag_service.py
rag_app/utils/: logger.py
rasa_service/: Dockerfile  config.yml  credentials.yml  domain.yml  endpoints.yml  requirements.txt
rasa_service/data/: nlu.yml  rules.yml  stories.yml
workflows/: action_server.sh
(+5 files in other folders)
