[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "farm-haystack>=1.26.4.post0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "pydantic>=1.10.21",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.2",
]
